포트폴리오 기본 UI 뼈대 구성

--- a/index.html
+++ b/index.html
@@ -1,11 +1,262 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Backend Portfolio</title>
+  <style>
+    /* 기본 리셋 및 타이포 */
+    :root {
+      --bg: #0e1116;
+      --panel: #11161f;
+      --accent: #5dd3ff;
+      --text: #e8edf2;
+      --muted: #9fb3c8;
+      --border: #1f2733;
+      --max-width: 980px;
+      --radius: 14px;
+      --shadow: 0 12px 40px rgba(0, 0, 0, 0.35);
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html { scroll-behavior: smooth; }
+    body {
+      background: var(--bg);
+      color: var(--text);
+      font-family: "Inter", "Pretendard", -apple-system, system-ui, sans-serif;
+      line-height: 1.6;
+      padding: 0 18px 72px;
+      display: flex;
+      justify-content: center;
+    }
+    .page { width: 100%; }
+    .shell { width: 100%; max-width: var(--max-width); margin: 0 auto; }
+    .topbar {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      width: 100%;
+      background: rgba(17, 22, 31, 0.92);
+      border-bottom: 1px solid var(--border);
+      backdrop-filter: blur(8px);
+      box-shadow: var(--shadow);
+    }
+    .topbar-inner {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 16px;
+    }
+    .logo { font-weight: 700; letter-spacing: 0.2px; }
+    nav { display: flex; gap: 12px; flex-wrap: wrap; }
+    nav a {
+      color: var(--muted);
+      padding: 8px 10px;
+      border-radius: 10px;
+    }
+    nav a:hover { color: var(--text); background: rgba(255,255,255,0.05); }
+    main { width: 100%; }
+    section {
+      scroll-margin-top: 80px;
+      background: var(--panel);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 28px 32px;
+      margin-bottom: 22px;
+      box-shadow: var(--shadow);
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 18px;
+    }
+    .title { font-size: 28px; font-weight: 700; }
+    .subtitle { color: var(--muted); margin-top: 6px; }
+    .pill {
+      display: inline-flex;
+      gap: 8px;
+      align-items: center;
+      padding: 8px 12px;
+      border-radius: 999px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.02);
+      color: var(--muted);
+      font-size: 14px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 14px;
+      margin-top: 12px;
+    }
+    .card {
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 16px;
+      background: #0c1017;
+    }
+    .card h3 { margin-bottom: 8px; }
+    .meta { color: var(--muted); font-size: 14px; margin-bottom: 6px; }
+    ul { list-style: none; display: grid; gap: 6px; }
+    a { color: var(--accent); text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .row { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
+    .footer { text-align: center; color: var(--muted); margin-top: 14px; font-size: 14px; }
+    @media (max-width: 640px) {
+      section { padding: 24px; }
+      header { flex-direction: column; align-items: flex-start; gap: 10px; }
+      .topbar-inner { flex-direction: column; align-items: flex-start; gap: 8px; }
+    }
+  </style>
 </head>
 <body>
-    안녕하세요
+  <div class="page">
+    <div class="topbar">
+      <div class="topbar-inner">
+        <div class="logo">Backend Portfolio</div>
+        <nav>
+          <a href="#hero">소개</a>
+          <a href="#skills">역량</a>
+          <a href="#projects">프로젝트</a>
+          <a href="#experience">경험</a>
+          <a href="#writing">글/발표</a>
+          <a href="#contact">연락처</a>
+        </nav>
+      </div>
+    </div>
+
+    <main class="shell">
+    <section id="hero">
+      <header>
+        <div>
+          <div class="title">Your Name</div>
+          <div class="subtitle">백엔드 개발자 · 관심 도메인/스택 한 줄</div>
+        </div>
+        <div class="row">
+          <span class="pill">📍 Seoul / Remote</span>
+          <span class="pill">📫 you@example.com</span>
+          <span class="pill"><a href="#" aria-label="GitHub link">GitHub</a></span>
+          <span class="pill"><a href="#" aria-label="LinkedIn link">LinkedIn</a></span>
+        </div>
+      </header>
+      <p class="subtitle">
+        한 문장 소개: 어떤 문제를 풀고 싶은 백엔드 개발자인지 적어주세요.
+      </p>
+    </section>
+
+    <section id="skills">
+      <header>
+        <div class="title">역량 스냅샷</div>
+        <span class="subtitle">언어 · 프레임워크 · 인프라 · 품질</span>
+      </header>
+      <div class="grid">
+        <div class="card">
+          <h3>언어/런타임</h3>
+          <ul>
+            <li>예: Java/Kotlin, Go, TypeScript/Node.js</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>프레임워크</h3>
+          <ul>
+            <li>예: Spring Boot / NestJS / Fiber</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>데이터 & 메시징</h3>
+          <ul>
+            <li>예: PostgreSQL, Redis, Kafka/RabbitMQ</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>운영 & 품질</h3>
+          <ul>
+            <li>예: Docker, K8s, CI/CD, Observability</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <header>
+        <div class="title">프로젝트</div>
+        <span class="subtitle">3개 이내, 문제 → 설계 → 결과 중심</span>
+      </header>
+      <div class="grid">
+        <article class="card">
+          <div class="meta">2025 · 역할 / 스택</div>
+          <h3>프로젝트 이름</h3>
+          <ul>
+            <li>문제/제약: 동시 접속 1만, p95 200ms 이하</li>
+            <li>설계: 캐시/큐/락 전략, 주요 아키텍처 한 줄</li>
+            <li>결과: RPS, 지연, 비용 등 숫자</li>
+            <li>링크: <a href="#">Repo</a> · <a href="#">Diagram</a></li>
+          </ul>
+        </article>
+        <article class="card">
+          <div class="meta">프로젝트 2</div>
+          <h3>이름</h3>
+          <ul>
+            <li>문제/제약</li>
+            <li>설계 포인트</li>
+            <li>결과 수치</li>
+            <li>링크</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section id="experience">
+      <header>
+        <div class="title">경험 & 기여</div>
+        <span class="subtitle">인턴 · 알바 · 오픈소스 · 스터디 리딩</span>
+      </header>
+      <div class="grid">
+        <div class="card">
+          <div class="meta">회사/프로젝트 · 기간</div>
+          <h3>역할</h3>
+          <ul>
+            <li>담당 영역: 예) 인증/결제/배치</li>
+            <li>성과: 수치나 개선사항</li>
+          </ul>
+        </div>
+        <div class="card">
+          <div class="meta">오픈소스/커뮤니티</div>
+          <h3>기여 포인트</h3>
+          <ul>
+            <li>PR/이슈, 발표, 스터디 리딩 등</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="writing">
+      <header>
+        <div class="title">기술 글 · 발표</div>
+        <span class="subtitle">설계/성능/장애 회고 중심</span>
+      </header>
+      <ul>
+        <li><a href="#">글/발표 제목</a> — 어떤 문제를 다루었는지 한 줄</li>
+        <li><a href="#">글/발표 제목</a> — 배운 점/결과</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <header>
+        <div class="title">Contact</div>
+        <span class="subtitle">이메일 · GitHub · LinkedIn</span>
+      </header>
+      <div class="row">
+        <span class="pill">📫 you@example.com</span>
+        <span class="pill"><a href="#">GitHub</a></span>
+        <span class="pill"><a href="#">LinkedIn</a></span>
+        <span class="pill"><a href="#">Blog</a></span>
+      </div>
+      <div class="footer">Keep it concise. 숫자와 역할을 강조하세요.</div>
+    </section>
+  </main>
+  </div>
 </body>
 </html>
