이력서내용수정

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Backend Portfolio</title>
+  <title>Lottone Portfolio</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <div class="page">
     <div class="topbar">
       <div class="topbar-inner">
-        <div class="logo">복권일 Portfolio</div>
+        <div class="logo">Portfolio</div>
         <nav>
           <a href="#hero">소개</a>
           <a href="#skills">역량</a>
@@ -26,13 +26,13 @@
     <section id="hero">
       <header>
         <div>
-          <div class="title">Your Name</div>
+          <div class="title">복권일</div>
           <div class="subtitle">백엔드 개발자 · 관심 도메인/스택 한 줄</div>
         </div>
         <div class="row">
           <span class="pill">📍 Seoul / Remote</span>
-          <span class="pill">📫 you@example.com</span>
-          <span class="pill"><a href="#" aria-label="GitHub link">GitHub</a></span>
+          <span class="pill">📫 lottone27@naver.com</span>
+          <span class="pill"><a href="https://github.com/lotto-one" aria-label="GitHub link" target="_blank" rel="noreferrer noopener">GitHub</a></span>
           <span class="pill"><a href="#" aria-label="LinkedIn link">LinkedIn</a></span>
         </div>
       </header>
