--- a/portfolio.html
+++ b/portfolio.html
@@ -23,22 +23,42 @@
 
     <div class="main-content">
       <main class="shell">
-    <section id="hero">
-      <header>
-        <div>
-          <div class="title">복권일</div>
-          <div class="subtitle">백엔드 개발자 · 관심 도메인/스택 한 줄</div>
+    <section id="hero" class="hero-section">
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1 class="hero-name">복권일</h1>
+          <p class="hero-role">백엔드 개발자</p>
+          <p class="hero-description">
+            한 문장 소개: 어떤 문제를 풀고 싶은 백엔드 개발자인지 적어주세요.
+            여기에 더 자세한 소개 내용을 작성할 수 있습니다.
+          </p>
+          <div class="hero-info">
+            <div class="hero-info-item">
+              <span class="hero-info-label">📍</span>
+              <span>Seoul / Remote</span>
+            </div>
+            <div class="hero-info-item">
+              <span class="hero-info-label">📫</span>
+              <span>lottone27@naver.com</span>
+            </div>
+            <div class="hero-info-item">
+              <span class="hero-info-label">🔗</span>
+              <a href="https://github.com/lotto-one" target="_blank" rel="noreferrer noopener">GitHub</a>
+            </div>
+            <div class="hero-info-item">
+              <span class="hero-info-label">💼</span>
+              <a href="#" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+            </div>
+          </div>
         </div>
-        <div class="row">
-          <span class="pill">📍 Seoul / Remote</span>
-          <span class="pill">📫 lottone27@naver.com</span>
-          <span class="pill"><a href="https://github.com/lotto-one" aria-label="GitHub link" target="_blank" rel="noreferrer noopener">GitHub</a></span>
-          <span class="pill"><a href="#" aria-label="LinkedIn link">LinkedIn</a></span>
+        <div class="hero-image">
+          <div class="hero-image-placeholder">
+            <!-- 실제 사진을 추가하려면 아래 주석을 해제하고 이미지 경로를 입력하세요 -->
+            <!-- <img src="./images/profile.jpg" alt="복권일 프로필 사진"> -->
+            <span>사진을 추가하세요</span>
+          </div>
         </div>
-      </header>
-      <p class="subtitle">
-        한 문장 소개: 어떤 문제를 풀고 싶은 백엔드 개발자인지 적어주세요.
-      </p>
+      </div>
     </section>
 
     <section id="skills">
