이미지추가

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,9 @@
       <div class="hero-content">
         <div class="hero-text">
           <h1 class="hero-name">복권일</h1>
-          <p class="hero-role">백엔드 개발자</p>
+          <p class="hero-role">풀스택 개발자</p>
           <p class="hero-description">
-            한 문장 소개: 어떤 문제를 풀고 싶은 백엔드 개발자인지 적어주세요.
-            여기에 더 자세한 소개 내용을 작성할 수 있습니다.
+            사용자 흐름을 이해하고, 이를 설계에 반영하는 풀스택 개발자입니다.
           </p>
           <div class="hero-info">
             <div class="hero-info-item">
@@ -46,16 +45,18 @@
               <a href="https://github.com/lotto-one" target="_blank" rel="noreferrer noopener">GitHub</a>
             </div>
             <div class="hero-info-item">
-              <span class="hero-info-label">💼</span>
-              <a href="#" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+              <span class="hero-info-label">📝</span>
+              <a href="https://lottone.tistory.com" target="_blank" rel="noreferrer noopener">
+                Tistory Blog
+              </a>
+              
             </div>
           </div>
         </div>
         <div class="hero-image">
           <div class="hero-image-placeholder">
-            <!-- 실제 사진을 추가하려면 아래 주석을 해제하고 이미지 경로를 입력하세요 -->
-            <!-- <img src="./images/profile.jpg" alt="복권일 프로필 사진"> -->
-            <span>사진을 추가하세요</span>
+            <img src="./image/bok.jpeg" alt="복권일 프로필 사진"> 
+            <span>포폴사진/span>
           </div>
         </div>
       </div>
