입장화면 수정

--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
       background: var(--accent);
       border-radius: 50%;
       opacity: 0;
-      animation: float 15s infinite ease-in-out;
-      bottom: -10px;
+      animation: float 8s infinite ease-in-out;
+      bottom: -20px;
+      box-shadow: 0 0 6px rgba(124, 196, 255, 0.6);
     }
 
     @keyframes fadeInUp {
@@ -224,14 +225,14 @@
         transform: translateY(0) translateX(0);
         opacity: 0;
       }
-      5% {
-        opacity: 0.6;
+      3% {
+        opacity: 0.8;
       }
-      95% {
-        opacity: 0.6;
+      97% {
+        opacity: 0.8;
       }
       100% {
-        transform: translateY(-110vh) translateX(50px);
+        transform: translateY(-120vh) translateX(50px);
         opacity: 0;
       }
     }
@@ -291,14 +292,14 @@
     // 파티클 생성
     function createParticles() {
       const particlesContainer = document.getElementById('particles');
-      const particleCount = 30;
+      const particleCount = 60;
 
       for (let i = 0; i < particleCount; i++) {
         const particle = document.createElement('div');
         particle.className = 'particle';
         particle.style.left = Math.random() * 100 + '%';
-        particle.style.animationDelay = Math.random() * 15 + 's';
-        particle.style.animationDuration = (10 + Math.random() * 10) + 's';
+        particle.style.animationDelay = Math.random() * 3 + 's';
+        particle.style.animationDuration = (4 + Math.random() * 4) + 's';
         particlesContainer.appendChild(particle);
       }
     }
