--- a/portfolio.html
+++ b/portfolio.html
@@ -60,23 +60,9 @@
           </p>
           <div class="hero-info">
             <div class="hero-info-item">
-              <span class="hero-info-label">📍</span>
-              <span>Seoul / Remote</span>
-            </div>
-            <div class="hero-info-item">
-              <span class="hero-info-label">📫</span>
               <span>lottone27@naver.com</span>
-            </div>
-            <div class="hero-info-item">
-              <span class="hero-info-label">🔗</span>
               <a href="https://github.com/lotto-one" target="_blank" rel="noreferrer noopener">GitHub</a>
-            </div>
-            <div class="hero-info-item">
-              <span class="hero-info-label">📝</span>
-              <a href="https://lottone.tistory.com" target="_blank" rel="noreferrer noopener">
-                Tistory Blog
-              </a>
-              
+              <a href="https://lottone.tistory.com" target="_blank" rel="noreferrer noopener">Blog</a>
             </div>
           </div>
         </div>
@@ -91,7 +77,7 @@
 
     <section id="projects">
       <header>
-        <div class="title">프로젝트</div>
+        <div class="title">Projects</div>
         <span class="subtitle">3개 이내, 문제 → 설계 → 결과 중심</span>
       </header>
       <div class="grid">
@@ -181,37 +167,53 @@
 
     <section id="experience">
       <header>
-        <div class="title">경험 & 기여</div>
+        <div class="title">Career</div>
         <span class="subtitle">인턴 · 알바 · 오픈소스 · 스터디 리딩</span>
       </header>
       <div class="grid">
         <div class="card">
-          <div class="meta">회사/프로젝트 · 기간</div>
-          <h3>역할</h3>
+          <div class="meta">비지언스  &nbsp;&nbsp;|&nbsp;&nbsp;  2025.01 ~ 재직중</div>
+          <h3>백엔드 개발자</h3>
           <ul>
-            <li>담당 영역: 예) 인증/결제/배치</li>
+            <li>담당 영역: 웹 개발</li>
             <li>성과: 수치나 개선사항</li>
           </ul>
         </div>
+      </div>
+      <div class="grid">
         <div class="card">
-          <div class="meta">오픈소스/커뮤니티</div>
-          <h3>기여 포인트</h3>
+          <div class="meta">풀스택 개발 교육 플랫폼  &nbsp;&nbsp;|&nbsp;&nbsp;  2024.02 ~ 2024.08</div>
+          <h3>Full Stack Developer</h3>
           <ul>
-            <li>PR/이슈, 발표, 스터디 리딩 등</li>
+            <li>담당 영역: 웹 개발, 모바일 개발, 데이터 분석</li>
+            <li>성과: 수치나 개선사항</li>
           </ul>
         </div>
       </div>
     </section>
 
-    <section id="writing">
+    <section id="Education">
       <header>
-        <div class="title">기술 글 · 발표</div>
-        <span class="subtitle">설계/성능/장애 회고 중심</span>
+        <div class="title">Education & Spec</div>
       </header>
+      <div class="grid">
+        <div class="card">
+          <div class="meta">2019.02 ~ 2024.02</div>
+          <h3>고려대학교 세종캠퍼스</h3>
+          <ul>
+            <li><a href="#">전공</a>&nbsp;&nbsp;&nbsp;전자및정보공학과</li>
+            <li><a href="#">주요 이수과목</a>&nbsp;&nbsp;&nbsp;프로그래밍 언어, 자료구조론, 컴퓨터구조론</li>
+            <li><a href="#">졸업 프로젝트</a>&nbsp;&nbsp;&nbsp;Arduino 기반 온도 센서 데이터를 활용한 설비 제어 시스템 개발</li>
+          </ul>          
+        </div>
+      </div>
+      <div class="grid">
+        <div class="card">
       <ul>
-        <li><a href="#">글/발표 제목</a> — 어떤 문제를 다루었는지 한 줄</li>
-        <li><a href="#">글/발표 제목</a> — 배운 점/결과</li>
+        <li><a href="#">2025.12</a>&nbsp;&nbsp;&nbsp;&nbsp; 리눅스마스터 2급</li>
       </ul>
+      </div>
+    </div>
     </section>
 
     <section id="contact">
@@ -227,6 +229,8 @@
       </div>
       <div class="footer">Keep it concise. 숫자와 역할을 강조하세요.</div>
     </section>
+
+
       </main>
       </div>
     </div>
