--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,14 @@
     <section id="hero" class="hero-section">
       <div class="hero-content">
         <div class="hero-text">
+          <p class="hero-kicker">About</p>
           <h1 class="hero-name">복권일</h1>
           <p class="hero-role">풀스택 개발자</p>
+          <div class="hero-meta">
+            <span class="hero-pill">사용자 중심</span>
+            <span class="hero-pill">성능 최적화</span>
+            <span class="hero-pill">협업 지향</span>
+          </div>
           <p class="hero-description">
             사용자 흐름을 이해하고, 이를 설계에 반영하는 풀스택 개발자입니다.
           </p>
@@ -86,8 +92,9 @@
       <h2 class="section-title">Projects</h2>
       <div class="section-content">
         <div class="projects-grid">
-          <article class="project-card">
-            <h3 class="project-title">프로젝트 이름</h3>
+          <article class="project-card" data-href="project-kbo.html">
+            <div class="project-body">
+            <h3 class="project-title">KBO 프로젝트</h3>
             <p class="project-meta">2025 · 역할 / 스택</p>
             <p class="project-desc">동시 접속 1만, p95 200ms 이하 - 캐시/큐/락 전략, 주요 아키텍처 한 줄</p>
             <div class="project-tags">
@@ -99,9 +106,16 @@
               <a href="#" class="project-link">GitHub →</a>
               <a href="#" class="project-link">Demo →</a>
             </div>
+            </div>
+            <div class="project-media">
+              <div class="project-image-placeholder">
+                <img src="./image/kbo_1.webp" alt="KBO 프로젝트 미리보기">
+              </div>
+            </div>
           </article>
 
           <article class="project-card">
+            <div class="project-body">
             <h3 class="project-title">프로젝트 2</h3>
             <p class="project-meta">2024 · 역할 / 스택</p>
             <p class="project-desc">문제/제약 설명 - 설계 포인트 - 결과 수치</p>
@@ -111,6 +125,12 @@
             </div>
             <div class="project-links">
               <a href="#" class="project-link">GitHub →</a>
+            </div>
+            </div>
+            <div class="project-media">
+              <div class="project-image-placeholder">
+                <span>preview</span>
+              </div>
             </div>
           </article>
         </div>
@@ -356,7 +376,17 @@
       scrollContainer.addEventListener('scroll', onScroll, { passive: true });
       updateActiveNav(); // 초기 실행
     });
+
+    // 프로젝트 카드 전체 클릭 이동
+    document.querySelectorAll('.project-card[data-href]').forEach((card) => {
+      card.addEventListener('click', (event) => {
+        if (event.target.closest('a')) return;
+        const href = card.getAttribute('data-href');
+        if (href) {
+          window.location.href = href;
+        }
+      });
+    });
   </script>
 </body>
 </html>
-
