--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,10 @@
             <span class="nav-icon">></span>
             <span class="nav-text">education</span>
           </a>
+          <a href="#certification">
+            <span class="nav-icon">></span>
+            <span class="nav-text">certification</span>
+          </a>
           <a href="#contact">
             <span class="nav-icon">></span>
             <span class="nav-text">contact</span>
@@ -200,20 +204,26 @@
         <div class="timeline">
           <div class="timeline-item">
             <div class="timeline-header">
-              <h3 class="company-name">비지언스</h3>
+              <h3 class="company-name">(주)비지언스</h3>
               <span class="period">2025.01 ~ 재직중</span>
             </div>
             <p class="position">백엔드 개발자</p>
-            <p class="description">웹 개발 담당 · 수치나 개선사항</p>
+            <p class="description">스마트팩토리 MES 웹서비스 백엔드 개발 및 운영</p>
+            <p class="description">RESTful API 설계·구현 및 생산 데이터 연동</p>
+            <p class="description">현장 공정용 태블릿 UI(Thymeleaf) 개발 및 실제 공장 적용</p>
+            <p class="description">AI 골프 캐디 R&D 과제 참여 (CNN 모델 커스터마이징)</p>
+
           </div>
 
           <div class="timeline-item">
             <div class="timeline-header">
-              <h3 class="company-name">풀스택 개발 교육 플랫폼</h3>
+              <h3 class="company-name">Java & Python 기반 풀스택 웹서비스 개발자 양성과정</h3>
               <span class="period">2024.02 ~ 2024.08</span>
             </div>
             <p class="position">Full Stack Developer</p>
-            <p class="description">웹 개발, 모바일 개발, 데이터 분석 · 수치나 개선사항</p>
+            <p class="description">RESTful API 기반 백엔드 개발</p>
+            <p class="description">Oracle·MySQL 데이터베이스 설계 및 연동</p>
+            <p class="description">Vue.js 기반 프론트엔드 구현</p>
           </div>
         </div>
       </div>
@@ -229,15 +239,20 @@
               <span class="edu-period">2019.02 ~ 2024.02</span>
             </div>
             <p class="major">전자및정보공학과</p>
-            <p class="project-info">Arduino 기반 온도 센서 데이터를 활용한 설비 제어 시스템 개발</p>
+            <p class="project-info">졸업프로젝트 : Arduino 기반 온도 센서 데이터를 활용한 설비 제어 시스템 개발</p>
           </div>
+        </div>
+      </div>
+    </section>
 
-          <div class="cert-section">
-            <h4 class="cert-title">자격증</h4>
-            <div class="cert-item">
-              <span>리눅스마스터 2급</span>
-              <span class="cert-date">2025.12</span>
-            </div>
+    <section id="certification" class="content-section">
+      <h2 class="section-title">Certification</h2>
+      <div class="section-content">
+        <div class="cert-section">
+          <h4 class="cert-title">자격증</h4>
+          <div class="cert-item">
+            <span>리눅스마스터 2급</span>
+            <span class="cert-date">2025.12</span>
           </div>
         </div>
       </div>
@@ -247,7 +262,7 @@
       <h2 class="section-title">Contact</h2>
       <div class="section-content">
         <div class="contact-grid">
-        <a href="mailto:lottone27@naver.com" class="contact-card">
+        <button type="button" class="contact-card contact-copy" data-copy="lottone27@naver.com" aria-label="이메일 주소 복사">
           <div class="contact-icon-wrapper">
             <svg class="contact-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="3" y="5" width="18" height="14" rx="2" stroke="#6B9EFF" stroke-width="2" fill="none"/>
@@ -256,7 +271,7 @@
           </div>
           <h3 class="contact-title">Email</h3>
           <p class="contact-info">lottone27@naver.com</p>
-        </a>
+        </button>
 
         <a href="https://github.com/lotto-one" target="_blank" rel="noreferrer noopener" class="contact-card">
           <div class="contact-icon-wrapper">
@@ -384,6 +399,52 @@
         const href = card.getAttribute('data-href');
         if (href) {
           window.location.href = href;
+        }
+      });
+    });
+
+    // 이메일 복사 버튼
+    document.querySelectorAll('.contact-copy[data-copy]').forEach((card) => {
+      const info = card.querySelector('.contact-info');
+      if (info && !card.dataset.originalText) {
+        card.dataset.originalText = info.textContent || '';
+      }
+
+      function showCopied() {
+        if (!info) return;
+        info.textContent = '복사됨';
+        window.setTimeout(() => {
+          info.textContent = card.dataset.originalText || '';
+        }, 1200);
+      }
+
+      function copyText(text) {
+        if (navigator.clipboard && window.isSecureContext) {
+          navigator.clipboard.writeText(text).then(showCopied).catch(() => {});
+          return;
+        }
+        const textarea = document.createElement('textarea');
+        textarea.value = text;
+        textarea.setAttribute('readonly', '');
+        textarea.style.position = 'absolute';
+        textarea.style.left = '-9999px';
+        document.body.appendChild(textarea);
+        textarea.select();
+        document.execCommand('copy');
+        document.body.removeChild(textarea);
+        showCopied();
+      }
+
+      card.addEventListener('click', () => {
+        const text = card.dataset.copy || '';
+        if (text) copyText(text);
+      });
+
+      card.addEventListener('keydown', (event) => {
+        if (event.key === 'Enter' || event.key === ' ') {
+          event.preventDefault();
+          const text = card.dataset.copy || '';
+          if (text) copyText(text);
         }
       });
     });
